# WorldSim

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
WorldSim/include/world_sim/: point.h
WorldSim/src/world_sim/: point.cpp
